mcp/slack/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: slack-mcp-server
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: slack-mcp-server
    weight: 100
  port:
    targetPort: 8000
  wildcardPolicy: None
